--- a/nmd/main/templates/main/header.html
+++ b/nmd/main/templates/main/header.html
@@ -35,19 +35,35 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="/" class="nav-link px-2 link-secondary">Главная</a></li>
-          <li><a href="/autor" class="nav-link px-2 link-body-emphasis">Авторы</a></li>
             <div class="dropdown">
-                <a href="/autor" class="nav-link px-2 link-body-emphasis">Документы</a>
+                <a  class="nav-link px-2 link-body-emphasis">Авторы</a>
                 <div class="dropdown-content">
-                  <a href="#">Свидетельство о регистрации программы базы данных</a>
-                  <a href="#">Свидетельство о регистрации программы для ЭВМ</a>
+                  <a href="/autor">Список авторов</a>
+                  <a href="/create_autor">Добавить автора</a>
+                </div>
+          </div>
+
+          
+            <div class="dropdown">
+                <a  class="nav-link px-2 link-body-emphasis">Документы</a>
+                <div class="dropdown-content">
+                  <a href="/doc_sorpbd/">Свидетельство о регистрации программы базы данных</a>
+                  <a href="/list_SoftwareRegistrationCertificate/">Свидетельство о регистрации программы для ЭВМ</a>
                   <a href="#">Журнал</a>
                   <a href="#">Диссертация</a>
                   <a href="#">Автореферат диссертации</a>
 
                 </div>
           </div>
+            <div class="dropdown">
+                <a  class="nav-link px-2 link-body-emphasis">Правообладатели</a>
+                <div class="dropdown-content">
+                  <a href="/pravo">Список правообладателей</a>
+                  <a href="/add_pravo/">Добавить правообладателей</a>
+   
 
+                </div>
+          </div>
 
         </ul>
 
