--- a/nmd/main/templates/main/list_SoftwareRegistrationCertificate.html
+++ b/nmd/main/templates/main/list_SoftwareRegistrationCertificate.html
@@ -14,9 +14,9 @@
 {% include 'main/header.html' %}
 <div class="container">
 
-    <h2>Список каких то документов</h2>
+    <h2>Список Свидетельств о регистрации программы для ЭВМ</h2>
 
-    <a href="/create_doc_sorpbd">добавить новую запись</a>
+    <a href="/create_evm/">добавить новую запись</a>
 
     <table class="table table-striped">
 
@@ -24,24 +24,15 @@
 
             <tr>
 
-                <th>Автор</th>
-
+                <th>id</th>
                 <th>номер свидетельства</th>
-
-                <th>название базы данных</th>
-
+                <th>название программы</th>
                 <th>номер заявки</th>
-
                 <th>дата заявки</th>
-
                 <th>дата регистрации</th>
-
                 <th>авторы</th>
-
                 <th>правообладатель</th>
-
                 <th>правообладатель организация</th>
-
                 <th>действие</th>
 
             </tr>
@@ -50,84 +41,45 @@
 
         <tbody>
 
-            {% for item in docsorpbd_list %}
-
+            {% for item in add_list_SoftwareRegistrationCertificate %}
             <tr>
-
                 <td>{{ item.id }}</td>
-
-                <td>{{ item.registration_certificate_number }}</td>
-
-                <td>{{ item.database_name }}</td>
-
+                <td>{{ item.certificate_number }}</td>
+                <td>{{ item.software_name }}</td>
                 <td>{{ item.request_number }}</td>
-
-                <td>{{ item.requestdate }}</td>
-
-                <td>{{ item.registrationdate }}</td>
-
+                <td>{{ item.request_date }}</td>
+                <td>{{ item.registration_date }}</td>
                 <td>
-
                     <ul>
-
                         {% for author in item.authors.all %}
-
                             <li>{{ author.name }}</li>
-
                         {% endfor %}
-
                     </ul>
-
                 </td>
-
                 <td>
-
                     <ul>
-
                         {% for individual_owner in item.individual_owners.all %}
-
                             <li>{{ individual_owner.name }}</li>
-
                         {% endfor %}
-
                     </ul>
-
                 </td>
-
                 <td>
-
                     <ul>
-
                         {% for organization_owner in item.organization_owners.all %}
-
                             <li>{{ organization_owner.name }}</li>
-
                         {% endfor %}
-
                     </ul>
-
                 </td>
-
                 <td>
-
                     <form method="post" action="{% url 'delete_doc_sorpbd' item.id %}">
-
                         {% csrf_token %}
-
                         <button type="submit" class="btn btn-danger">Удалить</button>
-
                     </form>
-
                 </td>
-
             </tr>
-
             {% endfor %}
-
         </tbody>
-
     </table>
-
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
