--- a/nmd/main/templates/main/header.html
+++ b/nmd/main/templates/main/header.html
@@ -64,15 +64,15 @@
 
       </ul>
 
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-        <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-      </form>
+      <a href="/">Поиск</a>
+
 
       {% if user_name %}
       <div class="dropdown">
         <a class="nav-link px-2 link-body-emphasis">{{ user_name }}</a>
         <div class="dropdown-content">
           <a href="/exit">Выход</a>
+          <a href="/user_profile">Профиль</a>
         </div>
       </div>
       {% endif %}
