--- a/nmd/main/templates/main/list_SoftwareRegistrationCertificate.html
+++ b/nmd/main/templates/main/list_SoftwareRegistrationCertificate.html
@@ -71,7 +71,7 @@
                     </ul>
                 </td>
                 <td>
-                    <form method="post" action="{% url 'delete_doc_sorpbd' item.id %}">
+                    <form method="post" action="{% url 'delete_doc_soft' item.id %}">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-danger">Удалить</button>
                     </form>
