--- a/nmd/main/templates/main/doc_sorpbd.html
+++ b/nmd/main/templates/main/doc_sorpbd.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Table of DocSorpbd</title>
+    <title>Свидетельство о регистрации программы базы данных</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -14,7 +14,7 @@
 {% include 'main/header.html' %}
 <div class="container">
 
-    <h2>Список каких то документов</h2>
+    <h2>Свидетельство о регистрации программы базы данных</h2>
 
     <a href="/create_doc_sorpbd">добавить новую запись</a>
 
@@ -25,23 +25,14 @@
             <tr>
 
                 <th>Автор</th>
-
                 <th>номер свидетельства</th>
-
                 <th>название базы данных</th>
-
                 <th>номер заявки</th>
-
                 <th>дата заявки</th>
-
                 <th>дата регистрации</th>
-
                 <th>авторы</th>
-
                 <th>правообладатель</th>
-
                 <th>правообладатель организация</th>
-
                 <th>действие</th>
 
             </tr>
