--- a/nmd/main/templates/main/main.html
+++ b/nmd/main/templates/main/main.html
@@ -23,107 +23,54 @@
     
     <h6 style="color:ccc">*отображаются последние 5 записей</h6>
     <h2>Свидетельство о регистрации программы базы данных</h2>
-
-
-
     <!-- Таблица для doc_sorpbd -->
-
-
-
     <table class="table table-striped">
-
         <thead>
-
             <tr>
-
                 <th>Автор</th>
                 <th>номер свидетельства</th>
                 <th>название базы данных</th>
                 <th>номер заявки</th>
-                <th>дата заявки</th>
-                <th>дата регистрации</th>
-                <th>авторы</th>
+
+                <th></th>
                 <th>правообладатель</th>
                 <th>правообладатель организация</th>
-
+              
+                <th>действие</th>
             </tr>
-
         </thead>
-
         <tbody>
-
             {% for item in doc_sorpbd %}
-
             <tr>
-
-                <td>{{ item.author }}</td>
-
-                <td>{{ item.certificate_number }}</td>
-
+                <td>{{ item.id }}</td>
+                <td>{{ item.registration_certificate_number }}</td>
                 <td>{{ item.database_name }}</td>
-
                 <td>{{ item.request_number }}</td>
 
-                <td>{{ item.request_date }}</td>
-
-                <td>{{ item.registration_date }}</td>
-
                 <td>
-
-                    <ul>
-
-                        {% for author in item.authors.all %}
-
-                            <li>{{ author.name }}</li>
-
-                        {% endfor %}
-
-                    </ul>
 
                 </td>
-
                 <td>
-
                     <ul>
-
                         {% for individual_owner in item.individual_owners.all %}
-
                             <li>{{ individual_owner.name }}</li>
-
                         {% endfor %}
-
                     </ul>
-
                 </td>
-
                 <td>
-
                     <ul>
-
                         {% for organization_owner in item.organization_owners.all %}
-
                             <li>{{ organization_owner.name }}</li>
-
                         {% endfor %}
-
                     </ul>
-
                 </td>
-
-            </tr>
-
+                    <td><a href="/docSorp_detail/{{item.id}}" class="btn btn-primary">Посмотреть запись</a></td>
+                </tr>       
             {% endfor %}
-
         </tbody>
-
     </table>
-
-
     <!-- Список Свидетельств о регистрации программы для ЭВМ -->
-
     <h2>Свидетельств о регистрации программы для ЭВМ</h2>
-
-
     <table class="table table-striped">
 
         <thead>
@@ -134,11 +81,12 @@
                 <th>номер свидетельства</th>
                 <th>название программы</th>
                 <th>номер заявки</th>
-                <th>дата заявки</th>
-                <th>дата регистрации</th>
+
                 <th>авторы</th>
                 <th>правообладатель</th>
                 <th>правообладатель организация</th>
+                <th>действие</th>
+
 
             </tr>
 
@@ -150,8 +98,7 @@
                 <td>{{ item.certificate_number }}</td>
                 <td>{{ item.software_name }}</td>
                 <td>{{ item.request_number }}</td>
-                <td>{{ item.request_date }}</td>
-                <td>{{ item.registration_date }}</td>
+
                 <td>
                     <ul>
                         {% for author in item.authors.all %}
@@ -173,6 +120,7 @@
                         {% endfor %}
                     </ul>
                 </td>
+                <td><a href="/softwareregistrationertificate_detail/{{item.id}}" class="btn btn-primary">Посмотреть запись</a></td>
             </tr>
             {% endfor %}
         </tbody>
