--- a/nmd/main/templates/main/add_create_autor.html
+++ b/nmd/main/templates/main/add_create_autor.html
@@ -1,27 +1,56 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Добавление автора</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-	{% include 'main/header.html' %}
+    {% include 'main/header.html' %}
     <div class="container mt-5">
         <h2>Добавление автора</h2>
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="autorName">Имя автора</label>
-                <input type="text" class="form-control" id="autorName" name="autor" required>
+                <label for="name">Имя</label>
+                <input type="text" class="form-control" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="last_name">Фамилия</label>
+                <input type="text" class="form-control" id="last_name" name="last_name">
+            </div>
+            <div class="form-group">
+                <label for="middle_name">Отчество (если есть)</label>
+                <input type="text" class="form-control" id="middle_name" name="middle_name">
+            </div>
+            <div class="form-group">
+                <label for="code">Шифр научной специальности</label>
+                <input type="text" class="form-control" id="code" name="code">
+            </div>
+
+            <div class="form-group">
+                <label for="birth_day">Дата рождения</label>
+                <input type="date" class="form-control" id="birth_day" name="birth_day">
+            </div>
+            <div class="form-group">
+                <label for="death_day">Дата смерти</label>
+                <input type="date" class="form-control" id="death_day" name="death_day">
+            </div>
+            <div class="form-group">
+                <label for="academic_degree">Ученая степень</label>
+                <input type="text" class="form-control" id="academic_degree" name="academic_degree">
+            </div>
+            <div class="form-group">
+                <label for="research_code">Место работы</label>
+                <input type="text" class="form-control" id="research_code" name="research_code">
+            </div>
+            <div class="form-group">
+                <label for="phone">Телефон</label>
+                <input type="text" class="form-control" id="phone" name="phone">
             </div>
             <button type="submit" class="btn btn-primary">Сохранить</button>
         </form>
     </div>
-
-   
 </body>
 </html>
