--- a/nmd/main/templates/main/list_autor.html
+++ b/nmd/main/templates/main/list_autor.html
@@ -14,6 +14,7 @@
             <tr>
                 <th>id</th>
                 <th>Автор</th>
+                <th></th>
 
             </tr>
         </thead>
@@ -22,7 +23,12 @@
             <tr>
                 <td>{{ item.id }}</td>
                 <td>{{ item.name }}</td>
-
+                <td>
+                    <form method="post" action="{% url 'autor_get' item.id %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger">профлиь автора</button>
+                    </form>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
