--- a/nmd/main/templates/main/header.html
+++ b/nmd/main/templates/main/header.html
@@ -51,6 +51,11 @@
             <a href="#">Журнал</a>
             <a href="#">Диссертация</a>
             <a href="#">Автореферат диссертации</a>
+            <a href="#">Книга</a>
+            <a href="#">Журнал</a>
+            <a href="#">Автореферат диссертации</a>
+            <a href="#">Статья в сборнике</a>
+            <a href="#">Патент</a>
           </div>
         </div>
 
