--- a/nmd/main/templates/main/header.html
+++ b/nmd/main/templates/main/header.html
@@ -48,9 +48,10 @@
           <div class="dropdown-content">
             <a href="/doc_sorpbd/">Свидетельство о регистрации программы базы данных</a>
             <a href="/list_SoftwareRegistrationCertificate/">Свидетельство о регистрации программы для ЭВМ</a>
+            <a href="/list_dissertation/">Диссертация</a>
             <a href="/list_artical_in_sbor/">Статья в сборнике</a>
             <a href="#">Журнал</a>
-            <a href="#">Диссертация</a>
+            
           
             <a href="#">Автореферат диссертации</a>
             <a href="#">Книга</a>
