--- a/nmd/main/templates/main/list_autor.html
+++ b/nmd/main/templates/main/list_autor.html
@@ -14,6 +14,11 @@
             <tr>
                 <th>id</th>
                 <th>Автор</th>
+                <th>шифр научной специальности человека</th>
+                <th>телефон</th>
+                <th></th>
+                <th></th>
+                
                 <th></th>
 
             </tr>
@@ -22,7 +27,10 @@
             {% for item in Autor %}
             <tr>
                 <td>{{ item.id }}</td>
-                <td>{{ item.name }}</td>
+                <td>{{ item.name }} {{item.first_name}} {{item.last_name}}</td>
+                <td>{{ item.code }}</td>
+                <td>{{ item.phone }}</td>
+                
                 <td>
                     <form method="post" action="{% url 'autor_get' item.id %}">
                         {% csrf_token %}
