--- a/nmd/main/templates/main/header.html
+++ b/nmd/main/templates/main/header.html
@@ -76,7 +76,7 @@
 
 
       {% if user_name %}
-      <div class="dropdown">
+      <div class="dropdown" style="float: right;">
         <a class="nav-link px-2 link-body-emphasis">{{ user_name }}</a>
         <div class="dropdown-content">
           <a href="/exit">Выход</a>
