--- a/nmd/main/templates/main/list_autor.html
+++ b/nmd/main/templates/main/list_autor.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>таблица авторов</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 {% include 'main/header.html' %}
