--- a/nmd/main/templates/main/register.html
+++ b/nmd/main/templates/main/register.html
@@ -3,7 +3,7 @@
 <head>
     <title>Регистрация</title>
     <!-- Подключение Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
