--- a/nmd/main/templates/main/list_pravo.html
+++ b/nmd/main/templates/main/list_pravo.html
@@ -8,7 +8,7 @@
 {% include 'main/header.html' %}
 <div class="container">
     <h2>Список  правообладателей</h2>
-    <a href="/create_autor">добавить правообладателя</a>
+    <a href="/add_pravo">добавить правообладателя</a>
     <table class="table table-striped">
         <thead>
             <tr>
