--- a/nmd/main/templates/main/login.html
+++ b/nmd/main/templates/main/login.html
@@ -20,6 +20,8 @@
                 <input type="password" class="form-control" id="password" name="password" required>
             </div>
             <button type="submit" class="btn btn-primary">Войти</button>
+
+            <a href="/registrate">зарегистрироваться</a>
         </form>
     </div>
 </body>
