--- a/nmd/main/templates/main/list_diser.html
+++ b/nmd/main/templates/main/list_diser.html
@@ -32,17 +32,17 @@
                 <td>
                     <ul>
                         {% for author in item.author.all %}
-                            <li>{{ author.name}} - автор</li>
+                            <li>{{ author.last_name }} {{ author.name}} {{ author.first_name}}- автор</li>
                         {% endfor %}
                     </ul>
                     <ul>
                         {% for author in item.scientific_supervisor.all %}
-                            <li>{{ author.name}} - научный руководитель</li>
+                            <li>{{ author.last_name}} {{ author.name}} {{ author.first_name}} - научный руководитель</li>
                         {% endfor %}
                     </ul>
                     <ul>
                         {% for author in item.scientific_consultants.all %}
-                            <li>{{ author.name}} - научный консультант</li>
+                            <li>{{ author.last_name}} {{ author.name}} {{ author.first_name}} - научный консультант</li>
                         {% endfor %}
                     </ul>
                 </td>
