--- a/nmd/main/templates/main/main.html
+++ b/nmd/main/templates/main/main.html
@@ -127,7 +127,7 @@
                 <th>Участники</th>
                 <th>область науки</th>
                 <th>уровень</th>
-                <th>организация выполнения диссертации/ место /выполнения диссертации</th>
+                <th>место/организация выполнения диссертации</th>
                 <th>действие</th>
             </tr>
         </thead>
