--- a/nmd/main/templates/main/doc_sorpbd.html
+++ b/nmd/main/templates/main/doc_sorpbd.html
@@ -65,9 +65,9 @@
                         {% csrf_token %}
                         <button type="submit" class="btn btn-danger">Удалить</button>
                     </form>
-                    
+                     {% if user_type != 'user' %}
                     <a href="/docSorp_detail/{{item.id}}"> <button class="btn btn-primary">Посмотреть запись</button></a>
-                   
+                    {% endif %}
                  
                 </td>
             </tr>
