--- a/nmd/main/templates/main/list_SoftwareRegistrationCertificate.html
+++ b/nmd/main/templates/main/list_SoftwareRegistrationCertificate.html
@@ -71,10 +71,14 @@
                     </ul>
                 </td>
                 <td>
+                     {% if user_type != 'user' %}
+
                     <form method="post" action="{% url 'delete_doc_soft' item.id %}">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-danger">Удалить</button>
                     </form>
+                       {% endif %}
+                       <a href="/softwareregistrationertificate_detail/{{item.id}}" class="btn btn-primary">Посмотреть запись</a>
                 </td>
             </tr>
             {% endfor %}
