--- a/nmd/main/templates/main/add_owner.html
+++ b/nmd/main/templates/main/add_owner.html
@@ -21,7 +21,7 @@
                 <input type="text" class="form-control" id="name" name="name" required>
             </div>
 
-            <select name="owner_types" class="form-select" id="owner_types" multiple>
+            <select name="owner_types" class="form-select" id="owner_types">
                 <option value="1">Правооблодатель - человек</option>
                 <option value="0">Правооблодатель - компания</option>
             </select>
