--- a/nmd/main/templates/main/doc_sorpbd.html
+++ b/nmd/main/templates/main/doc_sorpbd.html
@@ -37,8 +37,8 @@
                 <td>{{ item.registration_certificate_number }}</td>
                 <td>{{ item.database_name }}</td>
                 <td>{{ item.request_number }}</td>
-                <td>{{ item.requestdate }}</td>
-                <td>{{ item.registrationdate }}</td>
+                <td>{{ item.requestdate_s }}</td>
+                <td>{{ item.registrationdate_s }}</td>
                 <td>
                     <ul>
                         {% for author in item.authors.all %}
