--- a/nmd/main/templates/main/header.html
+++ b/nmd/main/templates/main/header.html
@@ -36,7 +36,7 @@
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="/" class="nav-link px-2 link-secondary">Главная</a></li>
         <div class="dropdown">
-          <a  class="nav-link px-2 link-body-emphasis">персоналии</a>
+          <a  class="nav-link px-2 link-body-emphasis">Персоналии</a>
           <div class="dropdown-content">
             <a href="/autor">Список персоналий</a>
             <a href="/create_autor">Добавить персоналию</a>
