--- a/nmd/main/templates/main/main.html
+++ b/nmd/main/templates/main/main.html
@@ -9,7 +9,7 @@
 
 <head>
 
-    <title>Table of DocSorpbd</title>
+    <title>Главная</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
